--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-torch==1.13.0
-torchvision==0.14.0
-numpy==1.23.0
-pandas==1.5.0
-matplotlib==3.5.1
-scikit-learn==1.1.2
-jupyter==1.0.0
+torch 2.7.0
+
